--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://www.allfreeimages.net/data/thumb/2/8757105262_341.jpg/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+              src="https://steamuserimages-a.akamaihd.net/ugc/947336857386518699/EC03B45E6C93517581E981357D8A897FD6D47B41/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
