--- a/chat.html
+++ b/chat.html
@@ -37,7 +37,7 @@
       <div class="chat__timestamp">Tuesday, October 13, 2020</div>
       <div class="message-row">
         <img
-          src="https://www.allfreeimages.net/data/thumb/2/8757105262_341.jpg/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://steamuserimages-a.akamaihd.net/ugc/947336857386518699/EC03B45E6C93517581E981357D8A897FD6D47B41/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Wallace</span>
@@ -58,7 +58,7 @@
 
       <div class="message-row">
         <img
-          src="https://www.allfreeimages.net/data/thumb/2/8757105262_341.jpg/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://steamuserimages-a.akamaihd.net/ugc/947336857386518699/EC03B45E6C93517581E981357D8A897FD6D47B41/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Wallace</span>
@@ -80,7 +80,7 @@
       </div>
       <div class="message-row">
         <img
-          src="https://www.allfreeimages.net/data/thumb/2/8757105262_341.jpg/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://steamuserimages-a.akamaihd.net/ugc/947336857386518699/EC03B45E6C93517581E981357D8A897FD6D47B41/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Wallace</span>
