--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Chat with Wallace - GromitTalk</title>
+    <title>Chat with Poketmon</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body id="chat-screen">
@@ -34,59 +34,59 @@
       </div>
     </header>
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">Tuesday, October 13, 2020</div>
+      <div class="chat__timestamp">Monday, December 12, 2022</div>
       <div class="message-row">
         <img
-          src="https://steamuserimages-a.akamaihd.net/ugc/947336857386518699/EC03B45E6C93517581E981357D8A897FD6D47B41/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="http://openimage.interpark.com/goods_image_big/6/2/0/2/7706076202_l.jpg/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
-          <span class="message__author">Wallace</span>
+          <span class="message__author">Pikachu</span>
           <div class="message__info">
-            <span class="message__bubble">Gromit wake up!</span>
-            <span class="message__time">10:01</span>
+            <span class="message__bubble">Squirtle Where are you?</span>
+            <span class="message__time">05:00</span>
           </div>
         </div>
       </div>
       <div class="message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">What's up?</span>
-            <span class="message__time">10:05</span>
+            <span class="message__bubble">I'm in Home What's up?</span>
+            <span class="message__time">05:01</span>
           </div>
         </div>
       </div>
 
       <div class="message-row">
         <img
-          src="https://steamuserimages-a.akamaihd.net/ugc/947336857386518699/EC03B45E6C93517581E981357D8A897FD6D47B41/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="http://openimage.interpark.com/goods_image_big/6/2/0/2/7706076202_l.jpg/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
-          <span class="message__author">Wallace</span>
+          <span class="message__author">Pikachu</span>
           <div class="message__info">
-            <span class="message__bubble">This is terrifying.</span>
-            <span class="message__time">10:06</span>
+            <span class="message__bubble">Go to the gym with me</span>
+            <span class="message__time">05:02</span>
           </div>
         </div>
       </div>
       <div class="message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble" id="what-happened"
-              >...What happened?</span
+            <span class="message__bubble" id="Ok Let's get lower body done today"
+              >...Let's get your lower body done today</span
             >
-            <span class="message__time" id="what-happened-time">10:06</span>
+            <span class="message__time" id="Let's get your lower body done today-time">05:03</span>
           </div>
         </div>
       </div>
       <div class="message-row">
         <img
-          src="https://steamuserimages-a.akamaihd.net/ugc/947336857386518699/EC03B45E6C93517581E981357D8A897FD6D47B41/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="http://openimage.interpark.com/goods_image_big/6/2/0/2/7706076202_l.jpg/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
-          <span class="message__author">Wallace</span>
+          <span class="message__author">Pikachu</span>
           <div class="message__info">
-            <span class="message__bubble">Someone stole my cheese!</span>
-            <span class="message__time">10:07</span>
+            <span class="message__bubble">Sound good Bro</span>
+            <span class="message__time">05:04</span>
           </div>
         </div>
       </div>
