--- a/chat.html
+++ b/chat.html
@@ -42,7 +42,7 @@
         <div class="message-row__content">
           <span class="message__author">Pikachu</span>
           <div class="message__info">
-            <span class="message__bubble">Squirtle Where are you?</span>
+            <span class="message__bubble">Charmander Where are you?</span>
             <span class="message__time">05:00</span>
           </div>
         </div>
