--- a/chats.html
+++ b/chats.html
@@ -39,16 +39,16 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmis8ZAc4BUvPz8cW1BWf7txqOyBZB5r4q8A&usqp=CAU/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+              src="https://imgur.com/a/nXJU0mK/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__name">Wallace</h4>
-              <h6 class="user-component__subtitle">Someone stole my cheese!</h6>
+              <h4 class="user-component__name">Pikachu</h4>
+              <h6 class="user-component__subtitle">Sounds good Bro!</h6>
             </div>
           </div>
           <div class="user-component__column">
-            <span>05:36 AM</span>
+            <span>08:36 AM</span>
             <div class="chat__notification">1</div>
           </div>
         </div>
@@ -57,13 +57,13 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://i3.ruliweb.com/img/20/05/26/1724cce025f50672a.jpg"
+            src="https://imgur.com/T7dgEtW"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__name">Ratatouille</h4>
+            <h4 class="user-component__name">Bulbasaur</h4>
             <h6 class="user-component__subtitle">
-              Wanna hang out this weekend?
+              Wanna Swim this weekend?
             </h6>
           </div>
         </div>
@@ -75,12 +75,12 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://photo.coolenjoy.co.kr/data/editor/1703/Bimg_20170313201053_lxtcewru.png"
+            src="https://imgur.com/ebC0Hf0"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__name">Fluffles</h4>
-            <h6 class="user-component__subtitle">I miss you...</h6>
+            <h4 class="user-component__name">Neko</h4>
+            <h6 class="user-component__subtitle">Should I build up my lower body muscles</h6>
           </div>
         </div>
         <div class="user-component__column">
