--- a/chat.html
+++ b/chat.html
@@ -37,7 +37,7 @@
       <div class="chat__timestamp">Monday, December 12, 2022</div>
       <div class="message-row">
         <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmis8ZAc4BUvPz8cW1BWf7txqOyBZB5r4q8A&usqp=CAU/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://imgur.com/a/nXJU0mK/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Pikachu</span>
@@ -58,7 +58,7 @@
 
       <div class="message-row">
         <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmis8ZAc4BUvPz8cW1BWf7txqOyBZB5r4q8A&usqp=CAU/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://imgur.com/a/nXJU0mK/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Pikachu</span>
@@ -80,7 +80,7 @@
       </div>
       <div class="message-row">
         <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmis8ZAc4BUvPz8cW1BWf7txqOyBZB5r4q8A&usqp=CAU/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://imgur.com/a/nXJU0mK/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Pikachu</span>
