--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://imgur.com/ByXT0ad/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+              src="<blockquote class="imgur-embed-pub" lang="en" data-id="i8PfTv2"><a href="https://imgur.com/i8PfTv2">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
