--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="<blockquote class="imgur-embed-pub" lang="en" data-id="a/ByXT0ad" data-context="false" ><a href="//imgur.com/a/ByXT0ad"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+              src="https://postfiles.pstatic.net/MjAyMjA5MjRfMTQz/MDAxNjYzOTgwNjUyMzc4.570vwLU-9_XGUVOaEnAqi7H82KOFRupk1dDk3Horfz8g.Bk7fvemUB9eyaMFGwdKCMDojLopIaukz82Y3WgW3CHog.JPEG.cursewild/pikachu.jpg?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
@@ -57,7 +57,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://imgur.com/T7dgEtW"
+            src="https://postfiles.pstatic.net/MjAyMjA5MjRfMjY5/MDAxNjYzOTgwNjUyMzc4.EhXbf-SBRzM_dRA1dAp_MP1NmEn1X48pWiGQkH_m-RIg.WjPZSasUnJYQMF-db1_FVbw0lecMo8Vwo_coK6_HFE0g.JPEG.cursewild/Squirtle.jpg?type=w773"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
@@ -75,7 +75,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://imgur.com/ebC0Hf0"
+            src="https://postfiles.pstatic.net/MjAyMjA5MjRfMTM1/MDAxNjYzOTgwNjUyNDAw.5yTuQL8FFvFtDvjJmgLdw9SPguX88mcv6CAdXsehJkMg.iIii7xIBeLOI97LRS3FLGEqStVIMhKNLjn_-hcfEP_og.JPEG.cursewild/i14830158769.jpg?type=w773"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
