--- a/chat.html
+++ b/chat.html
@@ -37,7 +37,7 @@
       <div class="chat__timestamp">Monday, December 12, 2022</div>
       <div class="message-row">
         <img
-          src="https://postfiles.pstatic.net/MjAyMjA5MjRfMTQz/MDAxNjYzOTgwNjUyMzc4.570vwLU-9_XGUVOaEnAqi7H82KOFRupk1dDk3Horfz8g.Bk7fvemUB9eyaMFGwdKCMDojLopIaukz82Y3WgW3CHog.JPEG.cursewild/pikachu.jpg?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://postfiles.pstatic.net/MjAyMjA5MjRfNDIg/MDAxNjYzOTgxMzQ0MTA0.PRL61qRsWDgO0U_TPgD9MJZAOKFB4h1q0LAaK8mwqJYg.atThnpbWk6JcJw0ADocfFjFGhIqB3bfqTLeLkLScbzQg.PNG.cursewild/pikachu.png?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Pikachu</span>
@@ -58,7 +58,7 @@
 
       <div class="message-row">
         <img
-          src="https://postfiles.pstatic.net/MjAyMjA5MjRfMTQz/MDAxNjYzOTgwNjUyMzc4.570vwLU-9_XGUVOaEnAqi7H82KOFRupk1dDk3Horfz8g.Bk7fvemUB9eyaMFGwdKCMDojLopIaukz82Y3WgW3CHog.JPEG.cursewild/pikachu.jpg?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://postfiles.pstatic.net/MjAyMjA5MjRfNDIg/MDAxNjYzOTgxMzQ0MTA0.PRL61qRsWDgO0U_TPgD9MJZAOKFB4h1q0LAaK8mwqJYg.atThnpbWk6JcJw0ADocfFjFGhIqB3bfqTLeLkLScbzQg.PNG.cursewild/pikachu.png?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Pikachu</span>
@@ -80,7 +80,7 @@
       </div>
       <div class="message-row">
         <img
-          src="https://postfiles.pstatic.net/MjAyMjA5MjRfMTQz/MDAxNjYzOTgwNjUyMzc4.570vwLU-9_XGUVOaEnAqi7H82KOFRupk1dDk3Horfz8g.Bk7fvemUB9eyaMFGwdKCMDojLopIaukz82Y3WgW3CHog.JPEG.cursewild/pikachu.jpg?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+          src="https://postfiles.pstatic.net/MjAyMjA5MjRfNDIg/MDAxNjYzOTgxMzQ0MTA0.PRL61qRsWDgO0U_TPgD9MJZAOKFB4h1q0LAaK8mwqJYg.atThnpbWk6JcJw0ADocfFjFGhIqB3bfqTLeLkLScbzQg.PNG.cursewild/pikachu.png?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
         />
         <div class="message-row__content">
           <span class="message__author">Pikachu</span>
