--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://postfiles.pstatic.net/MjAyMjA5MjRfMTQz/MDAxNjYzOTgwNjUyMzc4.570vwLU-9_XGUVOaEnAqi7H82KOFRupk1dDk3Horfz8g.Bk7fvemUB9eyaMFGwdKCMDojLopIaukz82Y3WgW3CHog.JPEG.cursewild/pikachu.jpg?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+              src="https://postfiles.pstatic.net/MjAyMjA5MjRfNDIg/MDAxNjYzOTgxMzQ0MTA0.PRL61qRsWDgO0U_TPgD9MJZAOKFB4h1q0LAaK8mwqJYg.atThnpbWk6JcJw0ADocfFjFGhIqB3bfqTLeLkLScbzQg.PNG.cursewild/pikachu.png?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
@@ -57,7 +57,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://postfiles.pstatic.net/MjAyMjA5MjRfMjY5/MDAxNjYzOTgwNjUyMzc4.EhXbf-SBRzM_dRA1dAp_MP1NmEn1X48pWiGQkH_m-RIg.WjPZSasUnJYQMF-db1_FVbw0lecMo8Vwo_coK6_HFE0g.JPEG.cursewild/Squirtle.jpg?type=w773"
+            src="https://postfiles.pstatic.net/MjAyMjA5MjRfMjE4/MDAxNjYzOTgxMzQ0MDk2.lt8VQJIuzlp5W9OSifTgUEesRggViYzXyCWMk91cs_sg.KspjTDfTAsXC40kw4FeGjBSPyrqMLr1SNcnuv2p8m5cg.PNG.cursewild/Squirtle.png?type=w773"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
@@ -75,7 +75,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://postfiles.pstatic.net/MjAyMjA5MjRfMTM1/MDAxNjYzOTgwNjUyNDAw.5yTuQL8FFvFtDvjJmgLdw9SPguX88mcv6CAdXsehJkMg.iIii7xIBeLOI97LRS3FLGEqStVIMhKNLjn_-hcfEP_og.JPEG.cursewild/i14830158769.jpg?type=w773"
+            src="https://postfiles.pstatic.net/MjAyMjA5MjRfODQg/MDAxNjYzOTgxMzQ0MTIx.gbnQgpK94V7MiIjkfczWvvBO54bsxgEUDEzIf_bkPSkg.YqpuiHLv4gFZaKqSvUm0kH7GJoP0CGN_RxsHlFHmSUUg.PNG.cursewild/i14830158769.png?type=w773"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
