--- a/chats.html
+++ b/chats.html
@@ -75,7 +75,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://postfiles.pstatic.net/MjAyMjA5MjRfODQg/MDAxNjYzOTgxMzQ0MTIx.gbnQgpK94V7MiIjkfczWvvBO54bsxgEUDEzIf_bkPSkg.YqpuiHLv4gFZaKqSvUm0kH7GJoP0CGN_RxsHlFHmSUUg.PNG.cursewild/i14830158769.png?type=w773"
+            src="https://blogfiles.pstatic.net/MjAyMjA5MjRfODQg/MDAxNjYzOTgxMzQ0MTIx.gbnQgpK94V7MiIjkfczWvvBO54bsxgEUDEzIf_bkPSkg.YqpuiHLv4gFZaKqSvUm0kH7GJoP0CGN_RxsHlFHmSUUg.PNG.cursewild/i14830158769.png"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
