--- a/chat.html
+++ b/chat.html
@@ -26,7 +26,7 @@
         <a href="chats.html"><i class="fas fa-angle-left fa-2x"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title" id="friend-name">Wallace</h1>
+        <h1 class="alt-header__title" id="friend-name">Pikachu</h1>
       </div>
       <div class="alt-header__column" id="chat-screen-icons">
         <span><i class="fas fa-search fa-2x"></i></span>
@@ -85,7 +85,7 @@
         <div class="message-row__content">
           <span class="message__author">Pikachu</span>
           <div class="message__info">
-            <span class="message__bubble">Sound good Bro</span>
+            <span class="message__bubble">Sounds good Bro</span>
             <span class="message__time">05:04</span>
           </div>
         </div>
