--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://postfiles.pstatic.net/MjAyMjA5MjRfNDIg/MDAxNjYzOTgxMzQ0MTA0.PRL61qRsWDgO0U_TPgD9MJZAOKFB4h1q0LAaK8mwqJYg.atThnpbWk6JcJw0ADocfFjFGhIqB3bfqTLeLkLScbzQg.PNG.cursewild/pikachu.png?type=w773/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmis8ZAc4BUvPz8cW1BWf7txqOyBZB5r4q8A&usqp=CAU/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
