--- a/chats.html
+++ b/chats.html
@@ -9,14 +9,14 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>Service Area</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>10:37 AM</span>
+        <span>05:37 AM</span>
       </div>
       <div class="status-bar__column">
-        <span>75%</span>
+        <span>90%</span>
         <i class="fas fa-battery-three-quarters"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -48,7 +48,7 @@
             </div>
           </div>
           <div class="user-component__column">
-            <span>08:36 AM</span>
+            <span>05:04 AM</span>
             <div class="chat__notification">1</div>
           </div>
         </div>
@@ -57,7 +57,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://postfiles.pstatic.net/MjAyMjA5MjRfMjE4/MDAxNjYzOTgxMzQ0MDk2.lt8VQJIuzlp5W9OSifTgUEesRggViYzXyCWMk91cs_sg.KspjTDfTAsXC40kw4FeGjBSPyrqMLr1SNcnuv2p8m5cg.PNG.cursewild/Squirtle.png?type=w773"
+            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t39.30808-6/231130396_3825054394261852_1083409904713934227_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=973b4a&_nc_ohc=SfSOmndZlRcAX8STFZz&_nc_ht=scontent-ssn1-1.xx&oh=00_AT9UrFGz5ih_iJPcJl5ZIZSju2H1JE1ljvibxdMWoIZEYA&oe=6333182B"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
@@ -68,14 +68,14 @@
           </div>
         </div>
         <div class="user-component__column">
-          <span>05:05 AM</span>
+          <span>09:05 AM</span>
         </div>
       </div>
       <div class="chatroom-divider"></div>
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://blogfiles.pstatic.net/MjAyMjA5MjRfODQg/MDAxNjYzOTgxMzQ0MTIx.gbnQgpK94V7MiIjkfczWvvBO54bsxgEUDEzIf_bkPSkg.YqpuiHLv4gFZaKqSvUm0kH7GJoP0CGN_RxsHlFHmSUUg.PNG.cursewild/i14830158769.png"
+            src="https://img.animalplanet.co.kr/news/2021/06/14/700/i49u53pr6fr2p8e5b38z.jpg"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="user-component__column">
-          <span>05:27 AM</span>
+          <span>10:27 AM</span>
         </div>
       </div>
     </main>
