--- a/chats.html
+++ b/chats.html
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="user-component__column">
-          <span>09:05 AM</span>
+          <span>09:05 PM</span>
         </div>
       </div>
       <div class="chatroom-divider"></div>
@@ -80,11 +80,11 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__name">Neko</h4>
-            <h6 class="user-component__subtitle">Should I build up my lower body muscles</h6>
+            <h6 class="user-component__subtitle">Build up, lower body!</h6>
           </div>
         </div>
         <div class="user-component__column">
-          <span>10:27 AM</span>
+          <span>10:27 PM</span>
         </div>
       </div>
     </main>
