--- a/find.html
+++ b/find.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Find - GromitTalk</title>
+    <title>Find - PoketmonTalk</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>Service Area</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>10:37 AM</span>
+        <span>05:37 AM</span>
       </div>
       <div class="status-bar__column">
-        <span>75%</span>
+        <span>90%</span>
         <i class="fas fa-battery-three-quarters"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -66,13 +66,13 @@
       </div>
       <div class="open-post">
         <div class="open-post__column">
-          <h5 class="open-post__title">#CheeseTrouble</h5>
-          <h6 class="open-post__hashtags">#cheese #cheeselovers</h6>
+          <h5 class="open-post__title">#Musclemon</h5>
+          <h6 class="open-post__hashtags">#muscle#musclemania</h6>
           <div class="open-post__members">
             <img
               src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1baium2_5f280f6f.jpeg?region=0,0,600,600"
             />
-            <span class="open-post__member-count">802 members</span>
+            <span class="open-post__member-count">999+ members</span>
             <div class="divider"></div>
             <span class="open-post__member-status">Active</span>
           </div>
@@ -80,7 +80,7 @@
         <div class="open-post__column">
           <div class="open-post__photo">
             <img
-              src="https://secure.i.telegraph.co.uk/multimedia/archive/01367/Wensleydale_1367148c.jpg"
+              src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.6435-9/185310029_2738100106481243_9028676164159510706_n.png?stp=dst-png_s320x320&_nc_cat=100&ccb=1-7&_nc_sid=8024bb&_nc_ohc=-noCSeiW0uoAX84-Tto&_nc_ht=scontent-ssn1-1.xx&oh=00_AT-AvGmAw6Jza3rNzmY3it56e7Rxlt1nM9t0uGZpreizNA&oe=6355DE29"
             />
             <div class="open-post__heart-count">
               <i class="fas fa-heart fa-xs"></i><span>326</span>
