--- a/friends.html
+++ b/friends.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Friends - GromitTalk</title>
+    <title>Friends - PoketmonTalk</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -101,7 +101,7 @@
         </div>
         <div class="user-component__column">
           <div class="user-component__column__music">
-            <span>Ending of Cherry Blossom - Busker Busker</span>
+            <span>Cherry Blossom - Busker Busker</span>
             <i class="fas fa-play"></i>
           </div>
         </div>
@@ -114,7 +114,7 @@
             class="user-component__avatar user-component__avatar__sm"
           />
           <div class="user-component__text">
-            <h4 class="user-component__name__sm">Neko/h4>
+            <h4 class="user-component__name__sm">Neko>
           </div>
         </div>
         <div class="user-component__column">
@@ -153,7 +153,7 @@
       </ul>
     </nav>
     <div id="splash-screen">
-      <img src="https://cdn0.iconfinder.com/data/icons/foody-icons/32/FoodyIcons_color-04-512.png"/>
+      <img src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.6435-9/185310029_2738100106481243_9028676164159510706_n.png?stp=dst-png_s320x320&_nc_cat=100&ccb=1-7&_nc_sid=8024bb&_nc_ohc=-noCSeiW0uoAX84-Tto&_nc_ht=scontent-ssn1-1.xx&oh=00_AT-AvGmAw6Jza3rNzmY3it56e7Rxlt1nM9t0uGZpreizNA&oe=6355DE29"/>
     </div>
 
     <div id="no-mobile">
