--- a/chats.html
+++ b/chats.html
@@ -61,7 +61,7 @@
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__name">Bulbasaur</h4>
+            <h4 class="user-component__name">Squirtle</h4>
             <h6 class="user-component__subtitle">
               Wanna Swim this weekend?
             </h6>
