--- a/friends.html
+++ b/friends.html
@@ -114,7 +114,7 @@
             class="user-component__avatar user-component__avatar__sm"
           />
           <div class="user-component__text">
-            <h4 class="user-component__name__sm">Neko>
+            <h4 class="user-component__name__sm">Neko</h4>
           </div>
         </div>
         <div class="user-component__column">
