--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>GromitTalk</title>
+    <title>PoketmonTalk</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>Service Area</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>10:37</span>
+        <span>05:37</span>
       </div>
       <div class="status-bar__column">
-        <span>75%</span>
+        <span>90%</span>
         <i class="fas fa-battery-three-quarters"></i>
         <i class="fas fa-bolt"></i>
       </div>
     </div>
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to GromitTalk</h1>
-      <span class="welcome-header__text"> If you have a Gromit Account, </span>
+      <h1 class="welcome-header__title">Welcome to PoketmonTalk</h1>
+      <span class="welcome-header__text"> If you have a Squirtle Account, </span>
       <span class="welcome-header__text">
         log in with your email or phone number.
       </span>
