--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to PoketmonTalk</h1>
-      <span class="welcome-header__text"> If you have a Squirtle Account, </span>
+      <span class="welcome-header__text"> If you have a Poketmon Account, </span>
       <span class="welcome-header__text">
         log in with your email or phone number.
       </span>
