--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       />
       <input name="password" type="password" required placeholder="Password" />
       <input type="submit" value="Log In" />
-      <a href="#">Find Gromit Account or Password</a>
+      <a href="#">Find Poketmon Account or Password</a>
     </form>
 
     <div id="no-mobile">
