--- a/more.html
+++ b/more.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>More - GromitTalk</title>
+    <title>More - PketmonTalk</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>Service Area</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>10:37 AM</span>
+        <span>05:37 AM</span>
       </div>
       <div class="status-bar__column">
-        <span>75%</span>
+        <span>90%</span>
         <i class="fas fa-battery-three-quarters"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -37,12 +37,12 @@
       <div class="user-component user-component__more">
         <div class="user-component__column">
           <img
-            src="https://i.pinimg.com/originals/d0/a5/20/d0a52063fb6a2e3b55171dbc5ae21525.jpg"
+            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t39.30808-6/220381796_3825054417595183_3377827291764252219_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=973b4a&_nc_ohc=Q0cxD4CgvNsAX9Af0oK&_nc_ht=scontent-ssn1-1.xx&oh=00_AT8o8iMS7-NMyqfMhIo2qeU-pkVNTpDaAPJOB-qDr9eOYA&oe=6332B373"
             class="user-component__avatar user-component__avatar__xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__name">Gromit</h4>
-            <h6 class="user-component__subtitle">010-7777-9999</h6>
+            <h4 class="user-component__name">Charmander</h4>
+            <h6 class="user-component__subtitle">010-1977-1212</h6>
           </div>
         </div>
         <div class="user-component__column">
@@ -92,26 +92,26 @@
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <img
-                src="https://maruhachi.files.wordpress.com/2012/09/dsc_4079.jpg"
+                src="https://mblogthumb-phinf.pstatic.net/MjAxOTEwMjNfMjgz/MDAxNTcxODI5OTA5NzY0.KGeurW5TgjwxApCZGlETGo2iyiuoRz4YxLiuO7YtG9gg.ohSu1z7Kv79j5uhTTcrgbKGwKDTThwtr8aANxdQKxzQg.JPEG.mmsus2392/%ED%94%84%EB%A1%9C%ED%8B%B4%EA%B8%B0%ED%94%84%ED%8A%B8_%EB%8B%A8%EB%B0%B1%EC%A7%88%EC%9D%8C%EB%A3%8C_(15).JPG?type=w800"
               />
             </div>
-            <span class="more-suggestions__icon-text">Cuppa Tea</span>
+            <span class="more-suggestions__icon-text">Protein Juice</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <img
-                src="https://imgc.allpostersimages.com/img/crop/posters/a-grand-day-out-with-wallace-and-gromit-movie-gromit-reading_a-G-8756464-0.jpg"
+                src="https://t1.daumcdn.net/cfile/tistory/235DEF445599F0F12E"
               />
             </div>
-            <span class="more-suggestions__icon-text">Bookworms</span>
+            <span class="more-suggestions__icon-text">Weight!Weight!</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <img
-                src="https://cdn.shopify.com/s/files/1/0015/1185/0042/files/Shaun-Sheep-3.jpg"
+                src="https://yt3.ggpht.com/ytc/AMLnZu9yrQgoV1uPOe1GW69ZqFrEOLAMP7LtAtUVKoWB=s900-c-k-c0x00ffffff-no-rj"
               />
             </div>
-            <span class="more-suggestions__icon-text">BakeLove</span>
+            <span class="more-suggestions__icon-text">Labour Songs</span>
           </div>
         </div>
       </div>
