--- a/friends.html
+++ b/friends.html
@@ -153,7 +153,7 @@
       </ul>
     </nav>
     <div id="splash-screen">
-      <img src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.6435-9/185310029_2738100106481243_9028676164159510706_n.png?stp=dst-png_s320x320&_nc_cat=100&ccb=1-7&_nc_sid=8024bb&_nc_ohc=-noCSeiW0uoAX84-Tto&_nc_ht=scontent-ssn1-1.xx&oh=00_AT-AvGmAw6Jza3rNzmY3it56e7Rxlt1nM9t0uGZpreizNA&oe=6355DE29"/>
+      <img src="https://e7.pngegg.com/pngimages/906/122/png-clipart-pokemon-logo-pokemon-logo.png"/>
     </div>
 
     <div id="no-mobile">
