--- a/friends.html
+++ b/friends.html
@@ -153,7 +153,7 @@
       </ul>
     </nav>
     <div id="splash-screen">
-      <img src="https://e7.pngegg.com/pngimages/906/122/png-clipart-pokemon-logo-pokemon-logo.png"/>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk_hLdWT8HuAD--lUKpCazqaCQuwpAM0DeTm7ZmmFEX060TcbD1wZm781CFzhe0zose3Q&usqp=CAU"/>
     </div>
 
     <div id="no-mobile">
