--- a/friends.html
+++ b/friends.html
@@ -153,7 +153,7 @@
       </ul>
     </nav>
     <div id="splash-screen">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk_hLdWT8HuAD--lUKpCazqaCQuwpAM0DeTm7ZmmFEX060TcbD1wZm781CFzhe0zose3Q&usqp=CAU"/>
+      <img src="https://ae01.alicdn.com/kf/S3bbaaff754cb4bff8cc13bce97a1faefk/Gk.jpg_Q90.jpg_.webp"/>
     </div>
 
     <div id="no-mobile">
