--- a/settings.html
+++ b/settings.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Chat with Wallace - GromitTalk</title>
+    <title>Chat with PoketmonTalk</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>Service Area</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>10:37 AM</span>
+        <span>05:37 AM</span>
       </div>
       <div class="status-bar__column">
-        <span>75%</span>
+        <span>90%</span>
         <i class="fas fa-battery-three-quarters"></i>
         <i class="fas fa-bolt"></i>
       </div>
