--- a/settings.html
+++ b/settings.html
@@ -45,7 +45,7 @@
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fas fa-flask"></i>
-            <span>Gromit Lab</span>
+            <span>Poketmon Lab</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
