--- a/find.html
+++ b/find.html
@@ -70,7 +70,7 @@
           <h6 class="open-post__hashtags">#muscle#musclemania</h6>
           <div class="open-post__members">
             <img
-              src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1baium2_5f280f6f.jpeg?region=0,0,600,600"
+              src="https://ac2-p.namu.la/20211002s2/142c327b9757748e4ca4caaa62565ceac0df712e7dc9de917fb8127a33327238.jpg?region=0,0,600,600"
             />
             <span class="open-post__member-count">999+ members</span>
             <div class="divider"></div>
