--- a/friends.html
+++ b/friends.html
@@ -110,16 +110,16 @@
       <div class="user-component friends-list">
         <div class="user-component__column">
           <img
-            src="https://img.animalplanet.co.kr/news/2021/06/14/700/i49u53pr6fr2p8e5b38z.jpg"
+            src="https://ac2-p.namu.la/20211002s2/142c327b9757748e4ca4caaa62565ceac0df712e7dc9de917fb8127a33327238.jpg"
             class="user-component__avatar user-component__avatar__sm"
           />
           <div class="user-component__text">
-            <h4 class="user-component__name__sm">Neko</h4>
+            <h4 class="user-component__name__sm">Psyduck</h4>
           </div>
         </div>
         <div class="user-component__column">
           <div class="user-component__column__music">
-            <span>Eye Of The Tiger - Survivor</span>
+            <span>Goose's Dream - Insooni</span>
             <i class="fas fa-play"></i>
           </div>
         </div>
