--- a/chats.html
+++ b/chats.html
@@ -75,12 +75,12 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://img.animalplanet.co.kr/news/2021/06/14/700/i49u53pr6fr2p8e5b38z.jpg"
+            src="https://ac2-p.namu.la/20211002s2/142c327b9757748e4ca4caaa62565ceac0df712e7dc9de917fb8127a33327238.jpg"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__name">Neko</h4>
-            <h6 class="user-component__subtitle">Build up, lower body!</h6>
+            <h4 class="user-component__name">Psyduck</h4>
+            <h6 class="user-component__subtitle"Headache got worse!</h6>
           </div>
         </div>
         <div class="user-component__column">
