--- a/chats.html
+++ b/chats.html
@@ -80,7 +80,7 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__name">Psyduck</h4>
-            <h6 class="user-component__subtitle"Headache got worse!</h6>
+            <h6 class="user-component__subtitle">Headache got worse!</h6>
           </div>
         </div>
         <div class="user-component__column">
