--- a/chats.html
+++ b/chats.html
@@ -75,7 +75,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://ac2-p.namu.la/20211002s2/142c327b9757748e4ca4caaa62565ceac0df712e7dc9de917fb8127a33327238.jpg"
+            src="https://ac-p.namu.la/20211002s1/a2ea91bcfc647a3e02aab45115023141f9c36b22c2d3726564b1072b3c371e06.jpg"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
