--- a/find.html
+++ b/find.html
@@ -70,7 +70,7 @@
           <h6 class="open-post__hashtags">#muscle#musclemania</h6>
           <div class="open-post__members">
             <img
-              src="https://ac2-p.namu.la/20211002s2/142c327b9757748e4ca4caaa62565ceac0df712e7dc9de917fb8127a33327238.jpg?region=0,0,600,600"
+              src="https://ac-p.namu.la/20211002s1/a2ea91bcfc647a3e02aab45115023141f9c36b22c2d3726564b1072b3c371e06.jpg?region=0,0,600,600"
             />
             <span class="open-post__member-count">999+ members</span>
             <div class="divider"></div>
