--- a/chat.html
+++ b/chat.html
@@ -50,7 +50,7 @@
       <div class="message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">I'm in Home What's up?</span>
+            <span class="message__bubble">my Home. Why?</span>
             <span class="message__time">05:01</span>
           </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__bubble" id="Ok Let's get lower body done today"
-              >...Let's get your lower body done today</span
+              >Ok. lower body done today</span
             >
             <span class="message__time" id="Let's get your lower body done today-time">05:03</span>
           </div>
