--- a/chats.html
+++ b/chats.html
@@ -57,7 +57,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t39.30808-6/231130396_3825054394261852_1083409904713934227_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=973b4a&_nc_ohc=SfSOmndZlRcAX8STFZz&_nc_ht=scontent-ssn1-1.xx&oh=00_AT9UrFGz5ih_iJPcJl5ZIZSju2H1JE1ljvibxdMWoIZEYA&oe=6333182B"
+            src="https://i1.ruliweb.com/img/21/04/04/1789b37ed37f78d.jpeg"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
