--- a/friends.html
+++ b/friends.html
@@ -43,7 +43,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t39.30808-6/220381796_3825054417595183_3377827291764252219_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=973b4a&_nc_ohc=Q0cxD4CgvNsAX9Af0oK&_nc_ht=scontent-ssn1-1.xx&oh=00_AT8o8iMS7-NMyqfMhIo2qeU-pkVNTpDaAPJOB-qDr9eOYA&oe=6332B373"
+            src="https://i3.ruliweb.com/img/21/04/04/1789b37efa5f78d.jpeg"
             class="user-component__avatar user-component__avatar__xl"
           />
           <div class="user-component__text">
@@ -79,7 +79,7 @@
         <div class="user-component friends-list">
           <div class="user-component__column">
             <img
-              src="https://scontent-ssn1-1.xx.fbcdn.net/v/t39.30808-6/231130396_3825054394261852_1083409904713934227_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=973b4a&_nc_ohc=SfSOmndZlRcAX8STFZz&_nc_ht=scontent-ssn1-1.xx&oh=00_AT9UrFGz5ih_iJPcJl5ZIZSju2H1JE1ljvibxdMWoIZEYA&oe=6333182B"
+              src="https://i1.ruliweb.com/img/21/04/04/1789b37ed37f78d.jpeg"
               class="user-component__avatar user-component__avatar__sm"
             />
             <div class="user-component__text">
@@ -92,7 +92,7 @@
       <div class="user-component friends-list">
         <div class="user-component__column">
           <img
-            src="https://scontent-ssn1-1.xx.fbcdn.net/v/t39.30808-6/227367114_3825054427595182_3087477359141302795_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=973b4a&_nc_ohc=tiotPmXIPwUAX8nc6EL&_nc_ht=scontent-ssn1-1.xx&oh=00_AT_yjdAUWRnMrxUE8bADKcpppnMOlYdvggBNv2836dgYVg&oe=6332B961"
+            src="https://i3.ruliweb.com/img/21/04/04/1789b37ee70f78d.jpeg"
             class="user-component__avatar user-component__avatar__sm"
           />
           <div class="user-component__text">
