--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmis8ZAc4BUvPz8cW1BWf7txqOyBZB5r4q8A&usqp=CAU/?imw=268&imh=268&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
+              src="https://user-images.githubusercontent.com/110315378/197384631-fc8d2fb8-bc4f-4641-8fd4-a965b43e7499.jpg"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
@@ -57,7 +57,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://i1.ruliweb.com/img/21/04/04/1789b37ed37f78d.jpeg"
+            src="https://user-images.githubusercontent.com/110315378/197384724-7d23b5f7-35ca-42d7-ba57-f7c1a92aa529.jpg"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
@@ -75,7 +75,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://ac-p.namu.la/20211002s1/a2ea91bcfc647a3e02aab45115023141f9c36b22c2d3726564b1072b3c371e06.jpg"
+            src="https://user-images.githubusercontent.com/110315378/197384694-1090b6d8-b68c-488c-ac5d-482e3ce1cff6.jpg"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
